--- a/inicio.html
+++ b/inicio.html
@@ -5,6 +5,5 @@
     <body>
         Contenido oficial
     </body>
-</html>siempre para adelante
-
-wenaaaaaaaaaa
+</html>siempre para aelante
+git commint-hola dejo este comentario positivo
